<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_bottom_1"
        android:icon="@drawable/ic_movie_white"
        android:title="@string/title_tab1" />
    <item
        android:id="@+id/nav_bottom_2"
        android:icon="@drawable/ic_tvshow_white"
        android:title="@string/title_tab2" />
    <item
        android:id="@+id/nav_bottom_3"
        android:icon="@drawable/ic_favorite_white"
        android:title="@string/title_tab3" />
</menu>